--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
             $(document).ready(function(){
                 $.getJSON("tableInit.json", function(json) {
 
-                        console.log(json);
-
-                    }
-                )
+                        //console.log(json);
+                        $.each(json, function() {
+                            var tbl_row = "";
+                            $.each(this, function(k , v) {
+                                tbl_row += "<td>"+v+"</td>";
+                            })
+                            $('#someTable tr:last').after(tbl_row);             
+                        })
+                    
+                })
             }
             )
         </script>
