--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <th>Третья колонка</th>
             </tr>
         </table>
+                                            
+        <canvas id="someCanvas" width = 200 height = 200></canvas>
+        <button>Пример работы HTML5+JavaScript</button>
 
     </body>
 
