--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </tr>
         </table>
                                             
-        <canvas id="someCanvas" width = 200 height = 200></canvas>
-        <button>Пример работы HTML5+JavaScript</button>
+        <canvas id="someCanvas" width = 200 height = 200 align="center"></canvas>
+        <button align="center" style="font-size:16px">Пример работы HTML5+JavaScript</button>
 
     </body>
 
