--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 style="text-align:center; background-color:DodgerBlue;
         padding: 15px; position: fixed; width: 100%;
         top: 0; left: 0; overflow: hidden;
-        font-size: 150%;"">
+        font-size: 150%;">
 
             <b>Невероятно</b><br>
             <i>потрясающая</i><br>
@@ -71,8 +71,10 @@
             </tr>
         </table>
                                             
-        <canvas id="someCanvas" width = 200 height = 200 align="center"></canvas>
-        <button align="center" style="font-size:16px">Пример работы HTML5+JavaScript</button>
+        <p align="center">
+            <canvas id="someCanvas" width = 200 height = 200></canvas>
+            <button style="font-size:16px;">Пример работы HTML5+JavaScript</button>
+        </p>
 
     </body>
 
