--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </table>
                                             
         <p align="center">
-            <canvas id="someCanvas" width = 200 height = 200></canvas>
+            <canvas id="someCanvas" width = 200 height = 200 style="border: 1px solid #000000;"></canvas>
             <button style="font-size:16px;">Пример работы HTML5+JavaScript</button>
         </p>
 
