--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </tr>
         </table>
                                             
-        <p align="center">
+        <p align="center" style="padding: 10px;">
             <canvas id="someCanvas" width = 200 height = 200 style="border: 1px solid #000000;"></canvas>
             <br>
             <button style="font-size:16px;">Пример работы HTML5+JavaScript</button>
