--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p align="center" style="margin: 40px;">
             <canvas id="someCanvas" width = 200 height = 200 style="border: 1px solid #000000;"></canvas>
             <br>
-            <button style="font-size:16px;">Пример работы HTML5+JavaScript</button>
+            <button style="font-size:16px; margin: 30px;">Пример работы HTML5+JavaScript</button>
         </p>
 
     </body>
