--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="mandelbrod.js"</script>
 
         <script>
             $(document).ready(function(){
@@ -74,7 +75,7 @@
         <p align="center" style="margin: 40px;">
             <canvas id="someCanvas" width = 200 height = 200 style="border: 1px solid #000000;"></canvas>
             <br>
-            <button style="font-size:16px; margin: 30px;">Пример работы HTML5+JavaScript</button>
+            <button style="font-size:16px; margin: 30px;" onclick = "createImage()">Пример работы HTML5+JavaScript</button>
         </p>
 
     </body>
