--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="mandelbrod.js"</script>
+        <script src="mandelbrod.js"></script>
 
         <script>
             $(document).ready(function(){
@@ -76,6 +76,8 @@
             <canvas id="someCanvas" width = 400 height = 400 style="border: 1px solid #000000;"></canvas>
             <br>
             <button style="font-size:16px; margin: 30px;" onclick = "createImage()">Пример работы HTML5+JavaScript</button>
+            <br>
+            P.S.: выделяя области мышкой, их можно увеличивать.
         </p>
 
     </body>
