--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                     <p><b>1</b>. Регистрация на GitHub 
                     <p><b>2</b>. Подключиться к репозиторию 
                     <p><b>3.</b> Создать личную страницу 
-                    <p><a href = 'https://github.com/'>Страница пользователя</a>
+                    <p><a href = 'https://github.com/stakanich'>Страница пользователя</a>
                     <p><b>4.</b> Создать персональную веб страницу-отчет с использованием html, css, js. 
                     <p><a href = '#'>Персональная страница-отчет. </a>
                     <p><b>5.</b> Загрузить персональную веб страницу-отчет в репозиторий 
                     по курсу "Интернет-технологии" на GitHub. 
-                    <p><a href = 'https://github.com/stankin/inet-2019/tree/master/'>Исходные коды</a>
+                    <p><a href = 'https://github.com/stakanich/TestPlayground'>Исходные коды</a>
                 </div>
 
             </div>
@@ -78,18 +78,18 @@
                     Лабораторная работа №2
                     <span class="expand" style = "margin: 3%; cursor: pointer;">+</span>
                 </h4>
+                <div><img class="img-responsive aligncenter" src="https://marshalzix.github.io/landing_houseplanning/img/screenshot.jpg"></div>
 
                 <div class="text" style="background-color: #E8E5E5; margin: 2%;
                 border-radius: 10px; padding: 1%; display: none;">
                     <h4 style="text-align:center; margin:0; padding: 0;"><p>Разработка простого веб-приложения</h4>
                     <h5 style="text-align:center; margin:0; padding: 0;"><p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html, css, js + json, xml</h5>
                     <p><b>1.</b> Собрать команду для разработки веб-приложения и распределить роли. 
-                    <p><a href = "https://github.com/">Страница команд. </a>
                     <p><b>2.</b> Разработать макет страницы веб-приложения.
-                    <p><a href = "https://girhub.com/">Макет страницы. </a>
+                    <p><a href = "https://marshalzix.github.io/landing_houseplanning/">Макет страницы. </a>
                     <p><b>3.</b> Прописать стили страницы. Исходный код на css. 
-                    <p><b>4.</b> Прописать js функционал и реализовать возможность чтения json. 
-                    <p>Исходный код на js и json.
+                    <p><b>4.</b> Прописать js функционал и реализовать возможность чтения json.
+                    <p> В качестве руковоителя проекта и управляющего продажами, моя задача состояла в назначении задач другим членам команды и составления продающего предложения потенциальным клиентам. По результатам, веб-сайт проекта был наполнен контентом, позволяющим заинтересовать посетителей, а также была подана заявка на участие в конкурсе проектов "Inet 2019 Contest".
                 </div>
             </div>
             <div style="border: 3px solid #F274D2; border-radius: 10px; margin: 3%;
