--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
                     Лабораторная работа №2
                     <span class="expand" style = "margin: 3%; cursor: pointer;">+</span>
                 </h4>
-                <div><img class="img-responsive aligncenter" src="https://marshalzix.github.io/landing_houseplanning/img/screenshot.jpg"></div>
+                
 
                 <div class="text" style="background-color: #E8E5E5; margin: 2%;
                 border-radius: 10px; padding: 1%; display: none;">
+                    <img class="img-responsive aligncenter" src="https://marshalzix.github.io/landing_houseplanning/img/screenshot.jpg">
                     <h4 style="text-align:center; margin:0; padding: 0;"><p>Разработка простого веб-приложения</h4>
                     <h5 style="text-align:center; margin:0; padding: 0;"><p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html, css, js + json, xml</h5>
                     <p><b>1.</b> Собрать команду для разработки веб-приложения и распределить роли. 
@@ -89,7 +90,7 @@
                     <p><a href = "https://marshalzix.github.io/landing_houseplanning/">Макет страницы. </a>
                     <p><b>3.</b> Прописать стили страницы. Исходный код на css. 
                     <p><b>4.</b> Прописать js функционал и реализовать возможность чтения json.
-                    <p> В качестве руковоителя проекта и управляющего продажами, моя задача состояла в назначении задач другим членам команды и составления продающего предложения потенциальным клиентам. По результатам, веб-сайт проекта был наполнен контентом, позволяющим заинтересовать посетителей, а также была подана заявка на участие в конкурсе проектов "Inet 2019 Contest".
+                    <p> В качестве руководителя проекта и управляющего продажами, моя задача состояла в назначении задач другим членам команды и составления продающего предложения потенциальным клиентам. По результатам, веб-сайт проекта был наполнен контентом, позволяющим заинтересовать посетителей, а также была подана заявка на участие в конкурсе проектов "Inet 2019 Contest".
                 </div>
             </div>
             <div style="border: 3px solid #F274D2; border-radius: 10px; margin: 3%;
