--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <div class="text" style="background-color: #E8E5E5; margin: 2%;
                 border-radius: 10px; padding: 1%; display: none;">
-                    <img class="img-responsive aligncenter" src="https://marshalzix.github.io/landing_houseplanning/img/screenshot.jpg">
+                    <img class="img-responsive aligncenter" src="https://marshalzix.github.io/landing_houseplanning/img/screenshot.jpg" style = "max-width: 100%; max-height: 100%; object-fit: contain">
                     <h4 style="text-align:center; margin:0; padding: 0;"><p>Разработка простого веб-приложения</h4>
                     <h5 style="text-align:center; margin:0; padding: 0;"><p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html, css, js + json, xml</h5>
                     <p><b>1.</b> Собрать команду для разработки веб-приложения и распределить роли. 
